# SmartDoor

./: CMakeLists.txt  README.md
include/: BlinkLight.h  CameraHandler.h  CameraState.h  ImageDataBase.h  MD5Creator.h  MyModel.h  MyServer.h  consts.h  general.h  md5.h
src/: BlinkLight.cpp  CMakeLists.txt  CameraHandler.cpp  ImageDataBase.cpp  MD5Creator.cpp  Makefile  MyModel.cpp  MyServer.cpp  cmake_install.cmake  debug.h  general.cpp  main.cpp  main_add.cpp  md5.cpp
